force-app/main/default/objects/Priorite__c/Priorite__c.object-meta.xml
<CustomObject>
    <label>Priorité</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priorités</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>