force-app/main/default/objects/Priorite__c/fields/Dernier_Jour_de_Modification_du_nombre__c.field-meta.xml
<CustomField>
    <fullName>Dernier_Jour_de_Modification_du_nombre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dernier Jour de Modification du nombre</label>
    <type>Date</type>
</CustomField>