force-app/main/default/objects/Priorite__c/fields/Priorite_10__c.field-meta.xml
<CustomField>
    <fullName>Priorite_10__c</fullName>
    <label>Priorité 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>