force-app/main/default/objects/Priorite__c/fields/Priorite_11__c.field-meta.xml
<CustomField>
    <fullName>Priorite_11__c</fullName>
    <label>Priorité 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>