force-app/main/default/objects/Priorite__c/fields/Priorite_Absolue__c.field-meta.xml
<CustomField>
    <fullName>Priorite_Absolue__c</fullName>
    <label>Priorité Absolue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>